--- a/index.html
+++ b/index.html
@@ -10,69 +10,7 @@
     <meta property="og:description" content="Supporting technical education and innovation">
     <meta property="og:image" content="./logo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #e6f3ff;
-            font-family: 'Roboto', sans-serif;
-            min-height: 100vh;
-        }
-        .logo {
-            width: 96px;
-            height: 96px;
-            border-radius: 50%;
-            transition: transform 0.3s ease;
-        }
-        @media (min-width: 992px) {
-            .logo {
-                width: 120px;
-                height: 120px;
-            }
-        }
-        .logo:hover {
-            transform: rotate(5deg);
-        }
-        .hover-lift {
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
-        .hover-lift:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
-        }
-        .icon {
-            width: 24px;
-            height: 24px;
-        }
-        @media (min-width: 992px) {
-            .icon {
-                width: 32px;
-                height: 32px;
-            }
-        }
-        .description {
-            direction: rtl;
-        }
-        .social-footer {
-            margin-top: 3rem;
-            padding-top: 2rem;
-            border-top: 1px solid rgba(0,0,0,.1);
-        }
-        .social-footer img {
-            width: 24px;
-            height: 24px;
-            opacity: 0.8;
-            transition: all 0.3s ease;
-        }
-        .social-footer a:hover img {
-            opacity: 1;
-            transform: translateY(-3px);
-        }
-        @media (max-width: 576px) {
-            .container {
-                padding-left: 1.5rem;
-                padding-right: 1.5rem;
-            }
-        }
-    </style>
+    <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
