--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#" class="social-link text-decoration-none">
                         <div class="card shadow-sm border-0 hover-lift">
                             <div class="card-body d-flex align-items-center p-3 p-lg-4">
-                                <img src="telegram.png" alt="Telegram" class="icon me-3">
+                                <span class="icon icon-telegram me-3" role="img" aria-label="Telegram"></span>
                                 <span class="flex-grow-1 fs-5">Telegram</span>
                                 <span class="text-muted">⋮</span>
                             </div>
@@ -37,7 +37,7 @@
             <a href="#" class="social-link text-decoration-none">
                 <div class="card shadow-sm border-0 hover-lift">
                     <div class="card-body d-flex align-items-center p-3 p-lg-4">
-                        <img src="facebook.png" alt="Facebook" class="icon me-3">
+                        <span class="icon icon-facebook me-3" role="img" aria-label="Facebook"></span>
                         <span class="flex-grow-1 fs-5">Facebook</span>
                         <span class="text-muted">⋮</span>
                     </div>
@@ -47,7 +47,7 @@
             <a href="#" class="social-link text-decoration-none">
                 <div class="card shadow-sm border-0 hover-lift">
                     <div class="card-body d-flex align-items-center p-3 p-lg-4">
-                        <img src="instagram.png" alt="Instagram" class="icon me-3">
+                        <span class="icon icon-instagram me-3" role="img" aria-label="Instagram"></span>
                         <span class="flex-grow-1 fs-5">Instagram</span>
                         <span class="text-muted">⋮</span>
                     </div>
@@ -57,7 +57,7 @@
             <a href="#" class="social-link text-decoration-none">
                 <div class="card shadow-sm border-0 hover-lift">
                     <div class="card-body d-flex align-items-center p-3 p-lg-4">
-                        <img src="youtube.png" alt="YouTube" class="icon me-3">
+                        <span class="icon icon-youtube me-3" role="img" aria-label="YouTube"></span>
                         <span class="flex-grow-1 fs-5">YouTube</span>
                         <span class="text-muted">⋮</span>
                     </div>
@@ -66,10 +66,10 @@
         </div>
         
         <div class="social-footer d-flex justify-content-center gap-3 gap-lg-4">
-            <a href="#" class="text-decoration-none p-2"><img src="facebook.png" alt="Facebook"></a>
-            <a href="#" class="text-decoration-none p-2"><img src="youtube.png" alt="YouTube"></a>
-            <a href="#" class="text-decoration-none p-2"><img src="instagram.png" alt="Instagram"></a>
-            <a href="#" class="text-decoration-none p-2"><img src="telegram.png" alt="Telegram"></a>
+            <a href="#" class="text-decoration-none p-2"><span class="icon icon-facebook" role="img" aria-label="Facebook"></span></a>
+            <a href="#" class="text-decoration-none p-2"><span class="icon icon-youtube" role="img" aria-label="YouTube"></span></a>
+            <a href="#" class="text-decoration-none p-2"><span class="icon icon-instagram" role="img" aria-label="Instagram"></span></a>
+            <a href="#" class="text-decoration-none p-2"><span class="icon icon-telegram" role="img" aria-label="Telegram"></span></a>
         </div>
     </div>
 
