Fix og:image meta tag path in index.html
Removed the leading './' from the og:image meta tag content to ensure correct image referencing for social sharing.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="FTSC, technical students, education, innovation">
     <meta property="og:title" content="Future Technical Students Club">
     <meta property="og:description" content="Supporting technical education and innovation">
-    <meta property="og:image" content="./logo.jpg">
+    <meta property="og:image" content="logo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
