--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta property="og:title" content="Future Technical Students Club">
     <meta property="og:description" content="Supporting technical education and innovation">
     <meta property="og:image" content="logo.jpg">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="logo.jpg">
+    <link rel="apple-touch-icon" href="logo.jpg">
+    <link rel="shortcut icon" type="image/jpg" href="logo.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
