--- a/index.html
+++ b/index.html
@@ -68,14 +68,13 @@
                 </div>
             </a>
         </div>
-        
-        <div class="social-footer d-flex justify-content-center gap-3 gap-lg-4">
-            <a href="#" class="text-decoration-none p-2"><span class="icon icon-facebook" role="img" aria-label="Facebook"></span></a>
-            <a href="#" class="text-decoration-none p-2"><span class="icon icon-youtube" role="img" aria-label="YouTube"></span></a>
-            <a href="#" class="text-decoration-none p-2"><span class="icon icon-instagram" role="img" aria-label="Instagram"></span></a>
-            <a href="#" class="text-decoration-none p-2"><span class="icon icon-telegram" role="img" aria-label="Telegram"></span></a>
-        </div>
     </div>
+
+    <footer class="fixed-bottom py-3">
+        <div class="text-center text-muted">
+            Made with ❤️ by <a href="https://github.com/w77sh" class="text-decoration-none text-primary" target="_blank">AbdulRahman Habeeb</a>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
