--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="text-center mb-4 mb-lg-5">
                     <img src="logo.jpg" alt="FTSC Logo" class="logo mb-3 mb-lg-4">
                     <h1 class="display-5 fw-bold mb-3">Future Technical Students Club</h1>
-                    <p class="description text-muted mb-4 fs-5">نحن طلاب المستقبل ✨ ، نجعل أحلامنا 🚀 وطموحاتنا 🌎، عالم أفضل.</p>
+                    <p id="dynamic-text" class="description text-muted mb-4 fs-5">نحن طلاب المستقبل ✨ ، نجعل أحلامنا 🚀 وطموحاتنا 🌎، عالم أفضل.</p>
                 </div>
                 
                 <div class="d-flex flex-column gap-3 mb-5">
@@ -78,5 +78,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
